--- a/index.html
+++ b/index.html
@@ -73,9 +73,9 @@
                             <p>row</p>
                         </div>
                         <div class="row1">
-                            <div class="block"></div>
-                            <div class="block"></div>
-                            <div class="block"></div>
+                            <div class="block">1</div>
+                            <div class="block">2</div>
+                            <div class="block">3</div>
                         </div>
                     </div>
 
@@ -84,9 +84,9 @@
                             <p>column</p>
                         </div>
                         <div class="row3">
-                            <div class="block"></div>
-                            <div class="block"></div>
-                            <div class="block"></div>
+                            <div class="block">1</div>
+                            <div class="block">2</div>
+                            <div class="block">3</div>
                         </div>
 
                     </div>
@@ -217,9 +217,9 @@
                 <p>flex-end</p>
             </div>
             <div class="fifht2">
-                <div class="block"></div>
-                <div class="block"></div>
-                <div class="block"></div>
+                <div class="block">1</div>
+                <div class="block">2</div>
+                <div class="block">3</div>
             </div>
         </div>
         <div class="blocks">
@@ -227,9 +227,9 @@
                 <p>center</p>
             </div>
             <div class="fifht3">
-                <div class="block"></div>
-                <div class="block"></div>
-                <div class="block"></div>
+                <div class="block">1</div>
+                <div class="block">2</div>
+                <div class="block">3</div>
             </div>
             <div class="name2">
                 <p>space-between</p>
@@ -277,9 +277,9 @@
                 <p>flex-start</p>
             </div>
             <div class="sixth2 ">
-                <div class="forsixth2 "></div>
-                <div class="forsixth1"></div>
-                <div class="block "></div>
+                <div class="forsixth2 ">1</div>
+                <div class="forsixth1">2</div>
+                <div class="block ">3</div>
             </div>
         </div>
         <div class="blocks ">
