--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
     <div class="first">
         <div>
             <div class="left_one">
-                <p class="name">display: flex;</p>
+                <p class="name">1. display: flex;</p>
                 <br>
                 <p class="name1">display: -webkit-flex</p>
-                <p>Назначение: запуск механизма Flexbox</p>
+                <p>Назначение: делает элемент строчным</p>
                 <p>Возможные значения: flex / inline-flex;</p>
             </div>
         </div>
@@ -56,10 +56,10 @@
     <div class="first">
         <div>
             <div class="left_two">
-                <p class="name">flex-direction: row;</p>
+                <p class="name">2. flex-direction: row;</p>
                 <br>
                 <p class="name1">-webkit-flex-direction: row;</p>
-                <p>Назначение: направление укладки элементов по осям</p>
+                <p>Назначение: располагать элементы горизонтально или вертикально</p>
                 <p>Возможные значения: row / row-reverse / column / column-reverse;</p>
             </div>
         </div>
@@ -127,10 +127,10 @@
     <div class="first">
         <div>
             <div class="left_three">
-                <p class="name">flex-wrap: nowrap;</p>
+                <p class="name">3. flex-wrap: nowrap;</p>
                 <br>
                 <p class="name1">-webkit-flex-wrap: nowrap;</p>
-                <p>Назначение: расположение элементов в одну или несколько строк</p>
+                <p>Назначение: помогает располагать такое количество элементов на строке, сколько необходимо</p>
                 <p>Возможные значения: nowrap / wrap / wrap-reverse;</p>
             </div>
         </div>
@@ -182,7 +182,7 @@
     <div class="first">
         <div>
             <div class="fourth">
-                <p class="name">flex-flow: row nowrap;</p>
+                <p class="name">4. flex-flow: row nowrap;</p>
                 <br>
                 <p class="name1">-webkit-flex-flow-nowrap: nowrap;</p>
                 <p>Назначение: сокращенная запись для свойств flex-direction и flex-wrap</p>
@@ -196,10 +196,10 @@
     <div class="first">
         <div>
             <div class="fifth">
-                <p class="name">justify-content: flex-start;</p>
+                <p class="name">5. justify-content: flex-start;</p>
                 <br>
                 <p class="name1">-webkit-justify-content-flex-start: nowrap;</p>
-                <p>Назначение: Выравнивание flex элементов по главной оси текущей строки</p>
+                <p>Назначение: Выравнивает элементы по оси "х"</p>
                 <p>Возможные значения: flex-start / flex-end / center / space-between / space-around</p>
             </div>
         </div>
@@ -257,10 +257,10 @@
     <div class="first">
         <div>
             <div class="sixth">
-                <p class="name">align-items: stretch;</p>
+                <p class="name">6. align-items: stretch;</p>
                 <br>
                 <p class="name1">-webkit-align-items-stretch;</p>
-                <p>Назначение: Выравнивание flex элементов вдоль поперечной оси</p>
+                <p>Назначение: Выравнивает элементы по оси "у"</p>
                 <p>Возможные значения: stretch/ flex-start / flex-end / center / baseline</p>
             </div>
         </div>
@@ -317,10 +317,10 @@
     <div class="first ">
         <div>
             <div class="seventh ">
-                <p class="name ">align-content: stretch;</p>
+                <p class="name ">7. align-content: stretch;</p>
                 <br>
                 <p class="name1 ">-webkit-justify-content-flex-start: nowrap;</p>
-                <p>Назначение: Выравнивание flex элементов вдоль поперечной оси</p>
+                <p>Назначение: распределяет пространство между и вокруг элементов контента вдоль оси "х"</p>
                 <p>Возможные значения: stretch/ flex-start / flex-end / center / space-between / space-around</p>
             </div>
         </div>
@@ -426,10 +426,10 @@
     <div class="first">
         <div>
             <div class="part_two1">
-                <p class="name ">order: 0;</p>
+                <p class="name ">1. order: 0;</p>
                 <br>
                 <p class="name1 ">-webkit-order-0;</p>
-                <p>Назначение: Определение порядка постановки flex элементов</p>
+                <p>Назначение: определяет порядок, используемый для размещения элементов </p>
                 <p>Возможные значения: (целое число)</p>
             </div>
         </div>
@@ -448,7 +448,7 @@
                         <div class="block">5</div>
                     </div>
                     <div class="name2">
-                        <p>order: -1 order: 0 rder:2</p>
+                        <p>order: -1 order: 0 оrder:2</p>
                     </div>
                 </div>
 
@@ -459,10 +459,10 @@
     <div class="first">
         <div>
             <div class="part_two2">
-                <p class="name ">flex-grow: 0;</p>
+                <p class="name ">2. flex-grow: 0;</p>
                 <br>
                 <p class="name1 ">-webkit-flex-grow-0;</p>
-                <p>Назначение: Указывает фактор растягивания flex элементов</p>
+                <p>Назначение: определяет сколько пространства должно быть в текущем элементе</p>
                 <p>Возможные значения: (целое неотрицательное число)</p>
             </div>
         </div>
@@ -503,10 +503,10 @@
     <div class="first">
         <div>
             <div class="part_two3">
-                <p class="name ">flex-shrink: 1;</p>
+                <p class="name ">3. flex-shrink: 1;</p>
                 <br>
                 <p class="name1 ">-webkit-flex-shrink-0;</p>
-                <p>Назначение: Указывает фактор сужения flex элементов</p>
+                <p>Назначение: указывает насколько элемент будет уменьшаться по отношению к другим </p>
                 <p>Возможные значения: 0</p>
             </div>
         </div>
@@ -550,10 +550,10 @@
     <div class="first">
         <div>
             <div class="part_two4">
-                <p class="name ">flex-basis: auto;</p>
+                <p class="name ">4. flex-basis: auto;</p>
                 <br>
                 <p class="name1 ">-webkit-flex-basis auto;</p>
-                <p>Назначение: Указывает исходныйглавный размер flex элементов</p>
+                <p>Назначение: Указывает начальный размер элементов</p>
                 <p>Возможные значения: длина элемента в пикселях (к примеру, 240рх)</p>
             </div>
         </div>
@@ -595,7 +595,7 @@
     <div class="first">
         <div>
             <div class="part_two5">
-                <p class="name ">flex: 0 1 auto;</p>
+                <p class="name ">5. flex: 0 1 auto;</p>
                 <br>
                 <p class="name1 ">-webkit-flex 0 1 auto;</p>
                 <p>Назначение: Сокращенная запись для свойств flex-grow, flex-shrink и flex-basis</p>
@@ -607,7 +607,7 @@
     <div class="first">
         <div>
             <div class="part_two6">
-                <p class="name ">align-self: auto;</p>
+                <p class="name ">6. align-self: auto;</p>
                 <br>
                 <p class="name1 ">-webkit-align-self:auto;</p>
                 <p>Назначение: Определяет выравнивание элемента по умолчанию</p>
